fix(Todoist): Fix time entry edit form on dark mode
There were more elements not visible or just weird because of Todoist's dark mode. These fixes should improve things in other tools using dark mode as well.

Related: #1531

--- a/src/styles/autocomplete.css
+++ b/src/styles/autocomplete.css
@@ -197,7 +197,7 @@
   opacity: 0.7;
 }
 
-.add-new-tag {
+#tag-autocomplete .add-new-tag {
   display: none;
   border: solid 1px #ececec;
   font-size: 14px;
@@ -211,12 +211,12 @@
   margin-bottom: 2px;
 }
 
-.add-new-tag:hover {
+#tag-autocomplete .add-new-tag:hover {
   background-color: rgba(75, 200, 0, 0.2);
   cursor: pointer;
 }
 
-.open .add-allowed .add-new-tag {
+.open #tag-autocomplete.add-allowed .add-new-tag {
   display: block;
 }
 
